# INF2004

./: README.md
Ethernet/examples/httpd/: main.c
Individual Drivers/Ethernet/: CMakeLists.txt
Individual Drivers/Ethernet/examples/httpd/: CMakeLists.txt
Individual Drivers/SD Card/: CMakeLists.txt  main.c
Individual Drivers/pico-webserver/: CMakeLists.txt  cgi.h  htmldata.c  main.c  ssi.h
Individual Drivers/pico-webserver/html_files/: index.shtml
SD Card/: main.c
nmap-lite/: CMakeLists.txt  cgi.h  globals.h  htmldata.c  lwipopts.h  proj.c  ssi.h
nmap-lite uf2 file/: nmap-lite.uf2
nmap-lite/html_files/: index.shtml  script.js
